--- a/package.json
+++ b/package.json
@@ -3,13 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
+    "concurrently": "^8.0.1",
+    "dummy-json": "^3.0.5",
+    "font-awesome": "^4.7.0",
+    "ftp-deploy": "^2.4.3",
+    "json-server": "^0.17.3",
+    "jspdf": "^2.5.1",
+    "npm-check": "^6.0.1",
     "react": "^18.2.0",
+    "react-bell-icon": "^1.0.1",
+    "react-bootstrap": "^2.7.2",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-popper": "^2.3.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sweetalert": "^2.1.2",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
